Adding first set of review comment changes
